// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/workers/repository/onboarding ensurePr(config, branchUpgrades) creates complex pr 1`] = `
Array [
  Array [
    "renovate/configure",
    "Configure Renovate",
    "Welcome to [Renovate](https://keylocation.sg/our-tech/renovate)!

This is an onboarding PR to help you understand and configure Renovate before any changes are made to any \`package.json\` files. Once you close this Pull Request, Renovate will begin keeping your dependencies up-to-date via automated Pull Requests.

---


With your current configuration, renovate will initially create the following Pull Requests:

| Pull Requests (2) |
| ------ |
| **Pin a**<ul><li>Branch name: \`branch-a\`</li><li>Pins [a](https://a) in \`undefined\` from \`^1.0.0\` to \`1.1.0\`</li></ul> |
| **Upgrade b**<ul><li>Schedule: \\"on monday\\"</li><li>Branch name: \`branch-b\`</li><li>Upgrades [b](https://b) in \`undefined\` from \`1.0.0\` to \`2.0.0\`</li></ul> |


Sometimes you may see multiple options for the same dependency (e.g. pinning in one branch and upgrading in another). This is expected and allows you the flexibility to choose which to merge first. Once you merge any PR, others will be updated or removed the next time Renovate runs.

Would you like to change the way Renovate is upgrading your dependencies? Simply edit the \`renovate.json\` in this branch and this Pull Request description will be updated the next time Renovate runs.

The [Configuration](https://github.com/singapore/renovate/blob/master/docs/configuration.md) and [Configuration FAQ](https://github.com/singapore/renovate/blob/master/docs/faq.md) documents should be helpful if you wish to modify any behaviour.

---

#### Don't want a \`renovate.json\` file?

You are not required to *merge* this Pull Request - Renovate will begin even if this \\"Configure Renovate\\" PR is closed *unmerged* and without a \`renovate.json\` file. However, it's recommended that you add configuration to your repository to ensure behaviour matches what you see described here.

Alternatively, you can add the same configuration settings into a \\"renovate\\" section of your \`package.json\` file(s) in this branch and delete the \`renovate.json\` from this PR. If you make these configuration changes in this branch then the results will be described in this PR after the next time Renovate runs.
",
  ],
]
`;

exports[`lib/workers/repository/onboarding ensurePr(config, branchUpgrades) creates pr 1`] = `
Array [
  Array [
    "renovate/configure",
    "Configure Renovate",
    "Welcome to [Renovate](https://keylocation.sg/our-tech/renovate)!

This is an onboarding PR to help you understand and configure Renovate before any changes are made to any \`package.json\` files. Once you close this Pull Request, Renovate will begin keeping your dependencies up-to-date via automated Pull Requests.

---

You have configured renovate to use branch \`next\` as base branch.

It looks like your repository dependencies are already up-to-date and no initial Pull Requests will be necessary.

Sometimes you may see multiple options for the same dependency (e.g. pinning in one branch and upgrading in another). This is expected and allows you the flexibility to choose which to merge first. Once you merge any PR, others will be updated or removed the next time Renovate runs.

Would you like to change the way Renovate is upgrading your dependencies? Simply edit the \`renovate.json\` in this branch and this Pull Request description will be updated the next time Renovate runs.

The [Configuration](https://github.com/singapore/renovate/blob/master/docs/configuration.md) and [Configuration FAQ](https://github.com/singapore/renovate/blob/master/docs/faq.md) documents should be helpful if you wish to modify any behaviour.

---

#### Don't want a \`renovate.json\` file?

You are not required to *merge* this Pull Request - Renovate will begin even if this \\"Configure Renovate\\" PR is closed *unmerged* and without a \`renovate.json\` file. However, it's recommended that you add configuration to your repository to ensure behaviour matches what you see described here.

Alternatively, you can add the same configuration settings into a \\"renovate\\" section of your \`package.json\` file(s) in this branch and delete the \`renovate.json\` from this PR. If you make these configuration changes in this branch then the results will be described in this PR after the next time Renovate runs.
",
  ],
]
`;

exports[`lib/workers/repository/onboarding ensurePr(config, branchUpgrades) creates shows warnings and errors 1`] = `
Array [
  Array [
    "renovate/configure",
    "Configure Renovate",
    "Welcome to [Renovate](https://keylocation.sg/our-tech/renovate)!

This is an onboarding PR to help you understand and configure Renovate before any changes are made to any \`package.json\` files. Once you close this Pull Request, Renovate will begin keeping your dependencies up-to-date via automated Pull Requests.

---

## Errors (1)

Renovate has raised errors when processing this repository that you should fix before merging or closing this PR.

Please make any fixes in _this branch_.
-   \`a\`: uhoh a

Feel free to raise create a [GitHub Issue](https:/github.com/singapore/renovate/issues) to ask any questions.

---

### Warnings (1)

Please correct - or verify that you can safely ignore - these warnings before you merge this PR.
-   \`b\`: uhoh b

---


With your current configuration, renovate will initially create the following Pull Requests:

| Pull Requests (2) |
| ------ |
| **Pin a**<ul><li>Branch name: \`branch-a\`</li><li>Pins [a](https://a) in \`undefined\` from \`^1.0.0\` to \`1.1.0\`</li></ul> |
| **Upgrade b**<ul><li>Branch name: \`branch-b\`</li><li>Upgrades [b](https://b) in \`undefined\` from \`1.0.0\` to \`2.0.0\`</li></ul> |


Sometimes you may see multiple options for the same dependency (e.g. pinning in one branch and upgrading in another). This is expected and allows you the flexibility to choose which to merge first. Once you merge any PR, others will be updated or removed the next time Renovate runs.

Would you like to change the way Renovate is upgrading your dependencies? Simply edit the \`renovate.json\` in this branch and this Pull Request description will be updated the next time Renovate runs.

The [Configuration](https://github.com/singapore/renovate/blob/master/docs/configuration.md) and [Configuration FAQ](https://github.com/singapore/renovate/blob/master/docs/faq.md) documents should be helpful if you wish to modify any behaviour.

---

#### Don't want a \`renovate.json\` file?

You are not required to *merge* this Pull Request - Renovate will begin even if this \\"Configure Renovate\\" PR is closed *unmerged* and without a \`renovate.json\` file. However, it's recommended that you add configuration to your repository to ensure behaviour matches what you see described here.

Alternatively, you can add the same configuration settings into a \\"renovate\\" section of your \`package.json\` file(s) in this branch and delete the \`renovate.json\` from this PR. If you make these configuration changes in this branch then the results will be described in this PR after the next time Renovate runs.
",
  ],
]
`;

exports[`lib/workers/repository/onboarding ensurePr(config, branchUpgrades) handles groups 1`] = `
Array [
  Array [
    "renovate/configure",
    "Configure Renovate",
    "Welcome to [Renovate](https://keylocation.sg/our-tech/renovate)!

This is an onboarding PR to help you understand and configure Renovate before any changes are made to any \`package.json\` files. Once you close this Pull Request, Renovate will begin keeping your dependencies up-to-date via automated Pull Requests.

---


With your current configuration, renovate will initially create the following Pull Requests:

| Pull Requests (1) |
| ------ |
| **Pin a**<ul><li>Branch name: \`branch-a\`</li><li>Pins [a](https://a) in \`undefined\` from \`^1.0.0\` to \`1.1.0\`</li><li>Upgrades [b](https://b) in \`undefined\` from \`1.0.0\` to \`2.0.0\`</li></ul> |


Sometimes you may see multiple options for the same dependency (e.g. pinning in one branch and upgrading in another). This is expected and allows you the flexibility to choose which to merge first. Once you merge any PR, others will be updated or removed the next time Renovate runs.

Would you like to change the way Renovate is upgrading your dependencies? Simply edit the \`renovate.json\` in this branch and this Pull Request description will be updated the next time Renovate runs.

The [Configuration](https://github.com/singapore/renovate/blob/master/docs/configuration.md) and [Configuration FAQ](https://github.com/singapore/renovate/blob/master/docs/faq.md) documents should be helpful if you wish to modify any behaviour.

---

#### Don't want a \`renovate.json\` file?

You are not required to *merge* this Pull Request - Renovate will begin even if this \\"Configure Renovate\\" PR is closed *unmerged* and without a \`renovate.json\` file. However, it's recommended that you add configuration to your repository to ensure behaviour matches what you see described here.

Alternatively, you can add the same configuration settings into a \\"renovate\\" section of your \`package.json\` file(s) in this branch and delete the \`renovate.json\` from this PR. If you make these configuration changes in this branch then the results will be described in this PR after the next time Renovate runs.
",
  ],
]
`;

exports[`lib/workers/repository/onboarding ensurePr(config, branchUpgrades) maintains yarn.lock 1`] = `
Array [
  Array [
    "renovate/configure",
    "Configure Renovate",
    "Welcome to [Renovate](https://keylocation.sg/our-tech/renovate)!

This is an onboarding PR to help you understand and configure Renovate before any changes are made to any \`package.json\` files. Once you close this Pull Request, Renovate will begin keeping your dependencies up-to-date via automated Pull Requests.

---


With your current configuration, renovate will initially create the following Pull Requests:

| Pull Requests (1) |
| ------ |
| **Lock File Maintenance**<ul><li>Schedule: \\"before 5am on monday\\"</li><li>Branch name: \`renovate/lock-files\`</li><li>Regenerates lock file to use latest dependency versions</li></ul> |


Sometimes you may see multiple options for the same dependency (e.g. pinning in one branch and upgrading in another). This is expected and allows you the flexibility to choose which to merge first. Once you merge any PR, others will be updated or removed the next time Renovate runs.

Would you like to change the way Renovate is upgrading your dependencies? Simply edit the \`renovate.json\` in this branch and this Pull Request description will be updated the next time Renovate runs.

The [Configuration](https://github.com/singapore/renovate/blob/master/docs/configuration.md) and [Configuration FAQ](https://github.com/singapore/renovate/blob/master/docs/faq.md) documents should be helpful if you wish to modify any behaviour.

---

#### Don't want a \`renovate.json\` file?

You are not required to *merge* this Pull Request - Renovate will begin even if this \\"Configure Renovate\\" PR is closed *unmerged* and without a \`renovate.json\` file. However, it's recommended that you add configuration to your repository to ensure behaviour matches what you see described here.

Alternatively, you can add the same configuration settings into a \\"renovate\\" section of your \`package.json\` file(s) in this branch and delete the \`renovate.json\` from this PR. If you make these configuration changes in this branch then the results will be described in this PR after the next time Renovate runs.
",
  ],
]
`;

exports[`lib/workers/repository/onboarding getOnboardingStatus(config) commits files and returns false if no pr 1`] = `
Array [
  "renovate/configure",
  Array [
    Object {
      "contents": "{
  \\"enabled\\": true,
  \\"timezone\\": null,
  \\"schedule\\": [],
  \\"packageFiles\\": [],
  \\"depTypes\\": [
    {
      \\"depType\\": \\"dependencies\\",
      \\"semanticPrefix\\": \\"fix(deps): \\",
      \\"pinVersions\\": false
    },
    \\"devDependencies\\",
    \\"optionalDependencies\\"
  ],
  \\"ignoreDeps\\": [],
  \\"pinVersions\\": true,
  \\"separateMajorReleases\\": true,
  \\"semanticCommits\\": false,
  \\"semanticPrefix\\": \\"chore(deps): \\",
  \\"rebaseStalePrs\\": false,
  \\"prCreation\\": \\"immediate\\",
  \\"automerge\\": \\"none\\",
  \\"branchName\\": \\"renovate/{{depName}}-{{newVersionMajor}}.x\\",
  \\"commitMessage\\": \\"{{semanticPrefix}}Update dependency {{depName}} to version {{newVersion}}\\",
  \\"labels\\": [],
  \\"assignees\\": [],
  \\"reviewers\\": [],
  \\"ignoreNodeModules\\": true
}
",
      "name": "renovate.json",
    },
  ],
  "Add renovate.json",
]
`;

exports[`lib/workers/repository/onboarding getOnboardingStatus(config) enables semantic commits 1`] = `
Array [
  "renovate/configure",
  Array [
    Object {
      "contents": "{
  \\"enabled\\": true,
  \\"timezone\\": null,
  \\"schedule\\": [],
  \\"packageFiles\\": [],
  \\"depTypes\\": [
    {
      \\"depType\\": \\"dependencies\\",
      \\"semanticPrefix\\": \\"fix(deps): \\",
      \\"pinVersions\\": false
    },
    \\"devDependencies\\",
    \\"optionalDependencies\\"
  ],
  \\"ignoreDeps\\": [],
  \\"pinVersions\\": true,
  \\"separateMajorReleases\\": true,
  \\"semanticCommits\\": true,
  \\"semanticPrefix\\": \\"chore(deps): \\",
  \\"rebaseStalePrs\\": false,
  \\"prCreation\\": \\"immediate\\",
  \\"automerge\\": \\"none\\",
  \\"branchName\\": \\"renovate/{{depName}}-{{newVersionMajor}}.x\\",
  \\"commitMessage\\": \\"{{semanticPrefix}}Update dependency {{depName}} to version {{newVersion}}\\",
  \\"labels\\": [],
  \\"assignees\\": [],
  \\"reviewers\\": [],
  \\"ignoreNodeModules\\": true
}
",
      "name": "renovate.json",
    },
  ],
  "Add renovate.json",
]
`;

exports[`lib/workers/repository/onboarding getOnboardingStatus(config) pins private repos 1`] = `
Array [
  "renovate/configure",
  Array [
    Object {
      "contents": "{
  \\"enabled\\": true,
  \\"timezone\\": null,
  \\"schedule\\": [],
  \\"packageFiles\\": [],
  \\"depTypes\\": [
    {
      \\"depType\\": \\"dependencies\\",
      \\"semanticPrefix\\": \\"fix(deps): \\",
      \\"pinVersions\\": false
    },
    \\"devDependencies\\",
    \\"optionalDependencies\\"
  ],
  \\"ignoreDeps\\": [],
  \\"pinVersions\\": true,
  \\"separateMajorReleases\\": true,
  \\"semanticCommits\\": false,
  \\"semanticPrefix\\": \\"chore(deps): \\",
  \\"rebaseStalePrs\\": false,
  \\"prCreation\\": \\"immediate\\",
  \\"automerge\\": \\"none\\",
  \\"branchName\\": \\"renovate/{{depName}}-{{newVersionMajor}}.x\\",
  \\"commitMessage\\": \\"{{semanticPrefix}}Update dependency {{depName}} to version {{newVersion}}\\",
  \\"labels\\": [],
  \\"assignees\\": [],
  \\"reviewers\\": [],
  \\"ignoreNodeModules\\": true
}
",
      "name": "renovate.json",
    },
  ],
  "Add renovate.json",
]
`;
